Implement Job Scheduling for making app Offline and syncing in background, added some more dependencies like logging, etc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MVVMDemoDagger2Executor</string>
+    <string name="app_name">MVVMDemoDagger2Reactive</string>
 
     <!--Added-->
     <string name="action_settings">Settings</string>
